[gd_scene load_steps=7 format=3 uid="uid://befany0i0e1sa"]

[ext_resource type="Script" path="res://Scripts/Scenes/AreaItem.gd" id="1_wjfvp"]
[ext_resource type="Texture2D" uid="uid://d3cceygh2xeu3" path="res://Graphics/UI/Button.png" id="2_6wi6a"]
[ext_resource type="Texture2D" uid="uid://1remsvujc7sp" path="res://Data/EU/MiniMap.png" id="3_ad3rb"]
[ext_resource type="Theme" uid="uid://duf2gciy0wwfv" path="res://Resources/UiTheme.tres" id="3_ovid7"]
[ext_resource type="Resource" uid="uid://dg6hv4y6cteq5" path="res://Resources/LevelStyle.tres" id="3_rlr0j"]
[ext_resource type="Texture2D" uid="uid://bbxs050rdic2j" path="res://Graphics/Icons/SelectionIndicator.png" id="4_eepod"]

[node name="AreaItem" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -139.0
offset_right = 240.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wjfvp")
Style = ExtResource("3_rlr0j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PictureContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/PictureContainer"]
layout_mode = 2

[node name="Image" type="TextureRect" parent="VBoxContainer/MarginContainer/PictureContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_ad3rb")

[node name="LabelContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/LabelContainer"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ovid7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Europe and other countries"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 1

[node name="Border" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
texture = ExtResource("2_6wi6a")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="SelectionIndicator" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_eepod")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
